[project]
name = "ptpython"
version = "3.0.31"
description = "Python REPL build on top of prompt_toolkit"
readme = "README.rst"
authors = [{ name = "Jonathan Slenders" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs",
    "jedi>=0.16.0",
    # Use prompt_toolkit 3.0.43, because of `OneStyleAndTextTuple` import.
    "prompt_toolkit>=3.0.43,<3.1.0",
    "pygments",
]


[project.urls]
Homepage = "https://github.com/prompt-toolkit/ptpython"
Changelog = "https://github.com/prompt-toolkit/ptpython/blob/master/CHANGELOG"
"Bug Tracker" = "https://github.com/prompt-toolkit/ptpython/issues"
"Source Code" = "https://github.com/prompt-toolkit/ptpython"


[project.scripts]
ptpython = "ptpython.entry_points.run_ptpython:run"
ptipython = "ptpython.entry_points.run_ptipython:run"


[project.optional-dependencies]
ptipython = ["ipython"] # For ptipython, we need to have IPython


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
platform = "win32"
strict_equality = true
strict_optional = true


[tool.ruff]
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "T",  # Print.
    "I",  # isort
    # "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "RUF100",  # unused-noqa
    "Q", # quotes
]
lint.ignore = [
    "E501",  # Line too long, handled by black
    "C901",  # Too complex
    "E722",  # bare except.
]


[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]  # Print allowed in examples.
"examples/ptpython_config/config.py" = ["F401"]  # Unused imports in config.
"src/ptpython/entry_points/run_ptipython.py" = ["T201", "F401"] # Print, import usage.
"src/ptpython/entry_points/run_ptpython.py" = ["T201"]  # Print usage.
"src/ptpython/ipython.py" = ["T100"]  # Import usage.
"src/ptpython/repl.py" = ["T201"]  # Print usage.
"src/ptpython/printer.py" = ["T201"]  # Print usage.


[tool.ruff.lint.isort]
known-first-party = ["ptpython"]
known-third-party = ["prompt_toolkit", "pygments", "asyncssh"]

[tool.typos.default]
extend-ignore-re = [
    "impotr" # Intentional typo in: ./examples/ptpython_config/config.py
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
